Added test cases for LongLiteral, TreeUtiliti
git-svn-id: file:///tmp/test-svn/trunk@2853 fe72c1cf-3628-48e9-8b72-1c46755d3cff